<resources>
    <string name="app_name">Android EBook</string>
    <string name="app_sub_name">This is my-book app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scheme">http</string>
    <string name="host">www.viaviweb.in</string>
    <string name="pathPrefix">/envato/cc/ebook_app_new_demo/</string>

    <string name="get_scheme">book</string>
    <string name="get_host">ebook_app</string>
    <string name="get_pathPrefix">/</string>

    <string name="isRTL">false</string>

    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="facebook_app_id">xxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">xxxxxxxxxxxx</string>

    <string name="play_more_app">https://play.google.com/store/apps/dev?id=7157478532572017100</string>

    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="category">Category</string>
    <string name="author">Author</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="faq">Faq</string>
    <string name="contact_us">Contact Us</string>
    <string name="all_comment">All Comments</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading..</string>
    <string name="downloading">Downloading</string>
    <string name="no_data_found">No data found</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="wrong">Something went to wrong please try again later</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="downloading_message">Other book is downloading wait for first download completing</string>
    <string name="storage_permission">Please allow storage permission</string>

    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">abcd</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phoneNo">Phone No</string>
    <string name="remember_me">Remember Me</string>
    <string name="skip">Skip</string>
    <string name="button_text_login">LOGIN</string>
    <string name="google_login">Login With Gmail</string>
    <string name="facebook_login">Login With Facebook</string>
    <string name="dont_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="button_text_register">REGISTER</string>
    <string name="terms_title">I have read and agree to the</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="forgot_password"><![CDATA[Forget password?]]></string>
    <string name="fp_des">Enter your email address below and  we\'ll send you email with password</string>
    <string name="send">Send</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_not_match">Password and confirm password does not match</string>
    <string name="please_select_terms">Please select terms and condition option</string>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change password</string>
    <string name="change_password_pro">Change Password</string>
    <string name="favorite_books">Favorite books</string>
    <string name="remove_image">Remove Image</string>
    <string name="gallery">Gallery</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_conform_password">New Conform Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_confirm_password">Please enter new confirm password</string>
    <string name="new_password_not_match">New password and new confirm password does not match</string>

    <string name="search_home">Search book</string>
    <string name="view_all">View all</string>
    <string name="continue_book">Continue Reading</string>
    <string name="continue_des">Book which have been read most</string>
    <string name="latest_book">Latest Book</string>
    <string name="latest_youVe_recently_read">Books which are newly added</string>
    <string name="popular_books">Popular Book</string>
    <string name="stories_youVe_recently_read">Books which have been read most</string>

    <string name="author_work">Representative Works</string>
    <string name="author_work_tag">Read all books of authors</string>
    <string name="user_not_instagram_link">Author has not added instagram link</string>
    <string name="user_not_youtube_link">Author has not added youtube link</string>
    <string name="user_not_facebook_link">Author has not added facebook link</string>
    <string name="user_not_web_link">Author has not added website link</string>

    <string name="items_capital">Items</string>
    <string name="items">items</string>
    <string name="view">View</string>
    <string name="view_details">View Details</string>
    <string name="by">by</string>
    <string name="number">0</string>

    <string name="description">Description</string>
    <string name="read_book">Read</string>
    <string name="you_have_allReady_download_book">You have all ready down load this book</string>
    <string name="report_book">Report book</string>
    <string name="related_books">Related Books</string>
    <string name="stories_youVe_related_read_books">Stories you\'ve related read books</string>
    <string name="comments">Comments</string>
    <string name="leave_your_comment">Leave your comment</string>
    <string name="please_enter_comment">Please Enter Comment</string>
    <string name="delete_comment">Are you sure want to delete this comment</string>
    <string name="rating">Rating.....</string>
    <string name="rating_status">Give at least one rating</string>
    <string name="thanks_for_rating_msg">How likely are you to recommend \n moving it to friend?(1-low,5-high)</string>

    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure you want to delete</string>

    <string name="search_cat">Search book by category</string>
    <string name="select_category_type">Select category type</string>
    <string name="please_select_category">Please select category</string>
    <string name="search_sub_cat">Search book by sub category</string>
    <string name="select_sub_category_type">Select sub category type</string>
    <string name="please_select_sub_category">Please select sub category</string>
    <string name="please_enter_book">Please Enter book name</string>
    <string name="search_author">Search book by author</string>
    <string name="select_author_type">Select author type</string>
    <string name="please_select_author">Please select author</string>
    <string name="search_book_name">Search book name</string>

    <string name="enable_push_notification">Enable push notification</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="select_contact_type">Select contact type</string>
    <string name="please_select_contact">Please select contact type</string>
    <string name="contact_detail">Please enter you contact details and admin will soon contact you.</string>
    <string name="them">Them</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="ok">OK</string>
    <string name="cancel"><![CDATA[CANCEL]]></string>
    <string name="choose_one">Choose one</string>

    <string name="update">Update</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>

</resources>
